--- a/src/components/DrawingCanvas/styles.module.css
+++ b/src/components/DrawingCanvas/styles.module.css
@@ -2,27 +2,26 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    position: absolute;
+    z-index: 1;
 }
 
 .drawingCanvasContainer {
     border: 1px solid grey;
     border-radius: 5px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    position: relative;
+    z-index: 1;
 }
 
 .actionButtonRow {
     display: flex;
     justify-content: center;
     gap: 1rem;
+    z-index: 2;
 }
 
 .drawingElementSelectField {
     display: flex;
     gap: 1rem;
-}
-
-.canvasTextArea {
-    position: fixed;
-    top: 100;
-    left: 100;
 }
